moving things around

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-  <link href="subzero.css" rel="stylesheet">
+  <link href="style/subzero.css" rel="stylesheet">
 
 </head>
 
@@ -23,12 +23,12 @@
   <div id="info"></div>
 </body>
 
-<script src="utils.js"></script>
-<script src="db.js"></script>
-<script src="gemini.js"></script>
-<script src="subzero-components.js"></script>
-<script src="subzero-db-gem.js"></script>
-<script src="control-panels.js"></script>
-<script src="main.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/db.js"></script>
+<script src="js/gemini.js"></script>
+<script src="js/subzero-components.js"></script>
+<script src="js/subzero-db-gem.js"></script>
+<script src="js/control-panels.js"></script>
+<script src="js/main.js"></script>
 
 </html>
